# opendevtoolkit

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: PLUGIN_SPEC.md
src/opendevtoolkit/: cli.py  paths.py  plugin_loader.py  types.py
src/opendevtoolkit/plugins/: __init__.py  files_clean.py  notes.py  readme_auditor.py  repo_check.py  time_tracker.py
tests/: test_readme_auditor.py  test_time_tracker_format.py
